@@ -5,6 +5,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fix for where pbs_mom would not automatically set gpu mode.
   b - fix for alligning qstat -r output when configured with -DTXT.
   e - Change size of transfer block used on job rerun from 4k to 64k.
+  b - With nvidia gpus, TORQUE was losing the directive of what nodes it should
+      run the job on from Moab. Corrected.
 
 3.0.4
   c - fix a buffer being overrun with nvidia gpus enabled
